lang/parse/y.output
Grammar

    0 $accept: program $end

    1 program: /* empty */
    2        | stmt_list

    3 block: LBRACE stmt_list RBRACE
    4      | LBRACE RBRACE
    5      | NL block
    6      | ':' simple_stmt

    7 stmt_list: statement
    8          | stmt_list statement

    9 statement: simple_stmt
   10          | compound_stmt
   11          | NL

   12 simple_stmt: assignment ';'
   13            | value ';'
   14            | GLOBAL VARIABLE ';'
   15            | NONLOCAL VARIABLE ';'
   16            | RETURN value ';'
   17            | RETURN ';'
   18            | CONTINUE ';'
   19            | BREAK ';'

   20 @1: /* empty */

   21 compound_stmt: @1 function

   22 @2: /* empty */

   23 compound_stmt: @2 class

   24 @3: /* empty */

   25 compound_stmt: @3 if_stmt

   26 @4: /* empty */

   27 compound_stmt: @4 while_stmt

   28 @5: /* empty */

   29 compound_stmt: @5 for_stmt

   30 @6: /* empty */

   31 compound_stmt: @6 import

   32 @7: /* empty */

   33 compound_stmt: @7 exception

   34 import: IMPORT module NL
   35       | IMPORT module AS VARIABLE NL
   36       | FROM module IMPORT import_items NL
   37       | FROM module IMPORT MUL NL

   38 module: VARIABLE
   39       | module '.' VARIABLE

   40 import_items: import_name
   41             | import_items ',' import_name

   42 import_name: VARIABLE
   43            | import_name '.' VARIABLE

   44 class: CLASS VARIABLE block
   45      | CLASS VARIABLE '(' args ')' block

   46 assignment: left_side '=' values
   47           | left_side equals values

   48 left_side: postfix
   49          | left_side ',' postfix

   50 equals: PLUS_EQ
   51       | MINUS_EQ
   52       | DIV_EQ
   53       | MUL_EQ
   54       | FLDIV_EQ
   55       | EXP_EQ
   56       | MOD_EQ
   57       | R_SHIFT_EQ
   58       | L_SHIFT_EQ
   59       | XOR_EQ
   60       | AND_EQ
   61       | OR_EQ

   62 value: ternary

   63 ternary: lambda
   64        | lambda QMARK lambda ':' ternary

   65 lambda: binop
   66       | LAMBDA param_list ':' lambda

   67 binop: binop LOGIC_OR binop
   68      | binop LOGIC_AND binop
   69      | binop BITOR binop
   70      | binop BITXOR binop
   71      | binop BITAND binop
   72      | binop EQ binop
   73      | binop NE binop
   74      | binop LT binop
   75      | binop GT binop
   76      | binop LE binop
   77      | binop GE binop
   78      | binop L_SHIFT binop
   79      | binop R_SHIFT binop
   80      | binop ADD binop
   81      | binop SUB binop
   82      | binop MUL binop
   83      | binop DIV binop
   84      | binop MOD binop
   85      | binop FLDIV binop
   86      | binop EXP binop
   87      | INVERT binop
   88      | BITNOT binop
   89      | SUB binop
   90      | ADD binop
   91      | '(' value ')'
   92      | postfix

   93 postfix: term
   94        | postfix '(' args ')'
   95        | postfix '(' args ',' kwargs ')'
   96        | postfix '.' VARIABLE
   97        | postfix '[' value ']'
   98        | postfix sliced_items

   99 term: INTEGER
  100     | DECIMAL
  101     | STRING
  102     | boolean
  103     | list
  104     | VARIABLE
  105     | NONE

  106 args: /* empty */
  107     | value
  108     | args ',' value

  109 boolean: TRUE
  110        | FALSE

  111 list: '[' ']'
  112     | '[' values ']'

  113 sliced_items: '[' slice_start ':' slice_end ':' slice_end ']'
  114             | '[' slice_start ':' slice_end ']'

  115 slice_start: /* empty */
  116            | value

  117 slice_end: /* empty */
  118          | value

  119 values: value
  120       | values ',' value

  121 kwargs: kwarg
  122       | kwargs ',' kwarg

  123 kwarg: VARIABLE '=' value

  124 @8: /* empty */

  125 function: FUNCTION VARIABLE '(' param_list ')' @8 block

  126 param_list: /* empty */
  127           | param_item
  128           | param_list ',' param_item

  129 param_item: VARIABLE
  130           | VARIABLE '=' value

  131 @9: /* empty */

  132 while_stmt: WHILE value @9 block

  133 if_stmt: IF value block elif_chain else_block

  134 elif_chain: /* empty */
  135           | ELIF value block elif_chain

  136 else_block: /* empty */
  137           | ELSE block

  138 @10: /* empty */

  139 for_stmt: FOR VARIABLE IN postfix @10 block

  140 exception: try_block catch_block
  141          | try_block final_block
  142          | try_block catch_block final_block

  143 try_block: TRY block

  144 catch_block: CATCH VARIABLE block
  145            | CATCH block
  146            | CATCH VARIABLE AS VARIABLE block

  147 final_block: FINALLY block


Terminals, with rules where they appear

$end (0) 0
'(' (40) 45 91 94 95 125
')' (41) 45 91 94 95 125
',' (44) 41 49 95 108 120 122 128
'.' (46) 39 43 96
':' (58) 6 64 66 113 114
';' (59) 12 13 14 15 16 17 18 19
'=' (61) 46 123 130
'[' (91) 97 111 112 113 114
']' (93) 97 111 112 113 114
error (256)
LBRACE (258) 3 4
RBRACE (259) 3 4
FROM (260) 36 37
CLASS (261) 44 45
IMPORT (262) 34 35 36 37
AS (263) 35 146
LAMBDA (264) 66
QMARK (265) 64
FUNCTION (266) 125
NL (267) 5 11 34 35 36 37
RETURN (268) 16 17
CONTINUE (269) 18
BREAK (270) 19
TRY (271) 143
CATCH (272) 144 145 146
FINALLY (273) 147
WHILE (274) 132
FOR (275) 139
IF (276) 133
ELIF (277) 135
ELSE (278) 137
GLOBAL (279) 14
NONLOCAL (280) 15
VARIABLE (281) 14 15 35 38 39 42 43 44 45 96 104 123 125 129 130 139
    144 146
STRING (282) 101
INTEGER (283) 99
DECIMAL (284) 100
ADD (285) 80 90
SUB (286) 81 89
MUL (287) 37 82
DIV (288) 83
MOD (289) 84
FLDIV (290) 85
EXP (291) 86
BITAND (292) 71
BITOR (293) 69
BITXOR (294) 70
L_SHIFT (295) 78
PLUS_EQ (296) 50
MINUS_EQ (297) 51
DIV_EQ (298) 52
R_SHIFT (299) 79
BITNOT (300) 88
MUL_EQ (301) 53
MOD_EQ (302) 56
L_SHIFT_EQ (303) 58
R_SHIFT_EQ (304) 57
XOR_EQ (305) 59
FLDIV_EQ (306) 54
EXP_EQ (307) 55
AND_EQ (308) 60
OR_EQ (309) 61
TRUE (310) 109
FALSE (311) 110
NONE (312) 105
LOGIC_AND (313) 68
LOGIC_OR (314) 67
INVERT (315) 87
EQ (316) 72
NE (317) 73
LT (318) 74
GT (319) 75
GE (320) 77
LE (321) 76
IN (322) 139


Nonterminals, with rules where they appear

$accept (77)
    on left: 0
program (78)
    on left: 1 2, on right: 0
block (79)
    on left: 3 4 5 6, on right: 5 44 45 125 132 133 135 137 139 143
    144 145 146 147
stmt_list (80)
    on left: 7 8, on right: 2 3 8
statement (81)
    on left: 9 10 11, on right: 7 8
simple_stmt (82)
    on left: 12 13 14 15 16 17 18 19, on right: 6 9
compound_stmt (83)
    on left: 21 23 25 27 29 31 33, on right: 10
@1 (84)
    on left: 20, on right: 21
@2 (85)
    on left: 22, on right: 23
@3 (86)
    on left: 24, on right: 25
@4 (87)
    on left: 26, on right: 27
@5 (88)
    on left: 28, on right: 29
@6 (89)
    on left: 30, on right: 31
@7 (90)
    on left: 32, on right: 33
import (91)
    on left: 34 35 36 37, on right: 31
module (92)
    on left: 38 39, on right: 34 35 36 37 39
import_items (93)
    on left: 40 41, on right: 36 41
import_name (94)
    on left: 42 43, on right: 40 41 43
class (95)
    on left: 44 45, on right: 23
assignment (96)
    on left: 46 47, on right: 12
left_side (97)
    on left: 48 49, on right: 46 47 49
equals (98)
    on left: 50 51 52 53 54 55 56 57 58 59 60 61, on right: 47
value (99)
    on left: 62, on right: 13 16 91 97 107 108 116 118 119 120 123
    130 132 133 135
ternary (100)
    on left: 63 64, on right: 62 64
lambda (101)
    on left: 65 66, on right: 63 64 66
binop (102)
    on left: 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84
    85 86 87 88 89 90 91 92, on right: 65 67 68 69 70 71 72 73 74 75
    76 77 78 79 80 81 82 83 84 85 86 87 88 89 90
postfix (103)
    on left: 93 94 95 96 97 98, on right: 48 49 92 94 95 96 97 98 139
term (104)
    on left: 99 100 101 102 103 104 105, on right: 93
args (105)
    on left: 106 107 108, on right: 45 94 95 108
boolean (106)
    on left: 109 110, on right: 102
list (107)
    on left: 111 112, on right: 103
sliced_items (108)
    on left: 113 114, on right: 98
slice_start (109)
    on left: 115 116, on right: 113 114
slice_end (110)
    on left: 117 118, on right: 113 114
values (111)
    on left: 119 120, on right: 46 47 112 120
kwargs (112)
    on left: 121 122, on right: 95 122
kwarg (113)
    on left: 123, on right: 121 122
function (114)
    on left: 125, on right: 21
@8 (115)
    on left: 124, on right: 125
param_list (116)
    on left: 126 127 128, on right: 66 125 128
param_item (117)
    on left: 129 130, on right: 127 128
while_stmt (118)
    on left: 132, on right: 27
@9 (119)
    on left: 131, on right: 132
if_stmt (120)
    on left: 133, on right: 25
elif_chain (121)
    on left: 134 135, on right: 133 135
else_block (122)
    on left: 136 137, on right: 133
for_stmt (123)
    on left: 139, on right: 29
@10 (124)
    on left: 138, on right: 139
exception (125)
    on left: 140 141 142, on right: 33
try_block (126)
    on left: 143, on right: 140 141 142
catch_block (127)
    on left: 144 145 146, on right: 140 142
final_block (128)
    on left: 147, on right: 141 142


state 0

    0 $accept: . program $end

    LAMBDA    shift, and go to state 1
    NL        shift, and go to state 2
    RETURN    shift, and go to state 3
    CONTINUE  shift, and go to state 4
    BREAK     shift, and go to state 5
    GLOBAL    shift, and go to state 6
    NONLOCAL  shift, and go to state 7
    VARIABLE  shift, and go to state 8
    STRING    shift, and go to state 9
    INTEGER   shift, and go to state 10
    DECIMAL   shift, and go to state 11
    ADD       shift, and go to state 12
    SUB       shift, and go to state 13
    BITNOT    shift, and go to state 14
    TRUE      shift, and go to state 15
    FALSE     shift, and go to state 16
    NONE      shift, and go to state 17
    INVERT    shift, and go to state 18
    '['       shift, and go to state 19
    '('       shift, and go to state 20

    $end      reduce using rule 1 (program)
    CLASS     reduce using rule 22 (@2)
    FUNCTION  reduce using rule 20 (@1)
    TRY       reduce using rule 32 (@7)
    WHILE     reduce using rule 26 (@4)
    FOR       reduce using rule 28 (@5)
    IF        reduce using rule 24 (@3)
    $default  reduce using rule 30 (@6)

    program        go to state 21
    stmt_list      go to state 22
    statement      go to state 23
    simple_stmt    go to state 24
    compound_stmt  go to state 25
    @1             go to state 26
    @2             go to state 27
    @3             go to state 28
    @4             go to state 29
    @5             go to state 30
    @6             go to state 31
    @7             go to state 32
    assignment     go to state 33
    left_side      go to state 34
    value          go to state 35
    ternary        go to state 36
    lambda         go to state 37
    binop          go to state 38
    postfix        go to state 39
    term           go to state 40
    boolean        go to state 41
    list           go to state 42


state 1

   66 lambda: LAMBDA . param_list ':' lambda

    VARIABLE  shift, and go to state 43

    $default  reduce using rule 126 (param_list)

    param_list  go to state 44
    param_item  go to state 45


state 2

   11 statement: NL .

    $default  reduce using rule 11 (statement)


state 3

   16 simple_stmt: RETURN . value ';'
   17            | RETURN . ';'

    LAMBDA    shift, and go to state 1
    VARIABLE  shift, and go to state 8
    STRING    shift, and go to state 9
    INTEGER   shift, and go to state 10
    DECIMAL   shift, and go to state 11
    ADD       shift, and go to state 12
    SUB       shift, and go to state 13
    BITNOT    shift, and go to state 14
    TRUE      shift, and go to state 15
    FALSE     shift, and go to state 16
    NONE      shift, and go to state 17
    INVERT    shift, and go to state 18
    '['       shift, and go to state 19
    '('       shift, and go to state 20
    ';'       shift, and go to state 46

    value    go to state 47
    ternary  go to state 36
    lambda   go to state 37
    binop    go to state 38
    postfix  go to state 48
    term     go to state 40
    boolean  go to state 41
    list     go to state 42


state 4

   18 simple_stmt: CONTINUE . ';'

    ';'  shift, and go to state 49


state 5

   19 simple_stmt: BREAK . ';'

    ';'  shift, and go to state 50


state 6

   14 simple_stmt: GLOBAL . VARIABLE ';'

    VARIABLE  shift, and go to state 51


state 7

   15 simple_stmt: NONLOCAL . VARIABLE ';'

    VARIABLE  shift, and go to state 52


state 8

  104 term: VARIABLE .

    $default  reduce using rule 104 (term)


state 9

  101 term: STRING .

    $default  reduce using rule 101 (term)


state 10

   99 term: INTEGER .

    $default  reduce using rule 99 (term)


state 11

  100 term: DECIMAL .

    $default  reduce using rule 100 (term)


state 12

   90 binop: ADD . binop

    VARIABLE  shift, and go to state 8
    STRING    shift, and go to state 9
    INTEGER   shift, and go to state 10
    DECIMAL   shift, and go to state 11
    ADD       shift, and go to state 12
    SUB       shift, and go to state 13
    BITNOT    shift, and go to state 14
    TRUE      shift, and go to state 15
    FALSE     shift, and go to state 16
    NONE      shift, and go to state 17
    INVERT    shift, and go to state 18
    '['       shift, and go to state 19
    '('       shift, and go to state 20

    binop    go to state 53
    postfix  go to state 48
    term     go to state 40
    boolean  go to state 41
    list     go to state 42


state 13

   89 binop: SUB . binop

    VARIABLE  shift, and go to state 8
    STRING    shift, and go to state 9
    INTEGER   shift, and go to state 10
    DECIMAL   shift, and go to state 11
    ADD       shift, and go to state 12
    SUB       shift, and go to state 13
    BITNOT    shift, and go to state 14
    TRUE      shift, and go to state 15
    FALSE     shift, and go to state 16
    NONE      shift, and go to state 17
    INVERT    shift, and go to state 18
    '['       shift, and go to state 19
    '('       shift, and go to state 20

    binop    go to state 54
    postfix  go to state 48
    term     go to state 40
    boolean  go to state 41
    list     go to state 42


state 14

   88 binop: BITNOT . binop

    VARIABLE  shift, and go to state 8
    STRING    shift, and go to state 9
    INTEGER   shift, and go to state 10
    DECIMAL   shift, and go to state 11
    ADD       shift, and go to state 12
    SUB       shift, and go to state 13
    BITNOT    shift, and go to state 14
    TRUE      shift, and go to state 15
    FALSE     shift, and go to state 16
    NONE      shift, and go to state 17
    INVERT    shift, and go to state 18
    '['       shift, and go to state 19
    '('       shift, and go to state 20

    binop    go to state 55
    postfix  go to state 48
    term     go to state 40
    boolean  go to state 41
    list     go to state 42


state 15

  109 boolean: TRUE .

    $default  reduce using rule 109 (boolean)


state 16

  110 boolean: FALSE .

    $default  reduce using rule 110 (boolean)


state 17

  105 term: NONE .

    $default  reduce using rule 105 (term)


state 18

   87 binop: INVERT . binop

    VARIABLE  shift, and go to state 8
    STRING    shift, and go to state 9
    INTEGER   shift, and go to state 10
    DECIMAL   shift, and go to state 11
    ADD       shift, and go to state 12
    SUB       shift, and go to state 13
    BITNOT    shift, and go to state 14
    TRUE      shift, and go to state 15
    FALSE     shift, and go to state 16
    NONE      shift, and go to state 17
    INVERT    shift, and go to state 18
    '['       shift, and go to state 19
    '('       shift, and go to state 20

    binop    go to state 56
    postfix  go to state 48
    term     go to state 40
    boolean  go to state 41
    list     go to state 42


state 19

  111 list: '[' . ']'
  112     | '[' . values ']'

    LAMBDA    shift, and go to state 1
    VARIABLE  shift, and go to state 8
    STRING    shift, and go to state 9
    INTEGER   shift, and go to state 10
    DECIMAL   shift, and go to state 11
    ADD       shift, and go to state 12
    SUB       shift, and go to state 13
    BITNOT    shift, and go to state 14
    TRUE      shift, and go to state 15
    FALSE     shift, and go to state 16
    NONE      shift, and go to state 17
    INVERT    shift, and go to state 18
    '['       shift, and go to state 19
    '('       shift, and go to state 20
    ']'       shift, and go to state 57

    value    go to state 58
    ternary  go to state 36
    lambda   go to state 37
    binop    go to state 38
    postfix  go to state 48
    term     go to state 40
    boolean  go to state 41
    list     go to state 42
    values   go to state 59


state 20

   91 binop: '(' . value ')'

    LAMBDA    shift, and go to state 1
    VARIABLE  shift, and go to state 8
    STRING    shift, and go to state 9
    INTEGER   shift, and go to state 10
    DECIMAL   shift, and go to state 11
    ADD       shift, and go to state 12
    SUB       shift, and go to state 13
    BITNOT    shift, and go to state 14
    TRUE      shift, and go to state 15
    FALSE     shift, and go to state 16
    NONE      shift, and go to state 17
    INVERT    shift, and go to state 18
    '['       shift, and go to state 19
    '('       shift, and go to state 20

    value    go to state 60
    ternary  go to state 36
    lambda   go to state 37
    binop    go to state 38
    postfix  go to state 48
    term     go to state 40
    boolean  go to state 41
    list     go to state 42


state 21

    0 $accept: program . $end

    $end  shift, and go to state 61


state 22

    2 program: stmt_list .
    8 stmt_list: stmt_list . statement

    LAMBDA    shift, and go to state 1
    NL        shift, and go to state 2
    RETURN    shift, and go to state 3
    CONTINUE  shift, and go to state 4
    BREAK     shift, and go to state 5
    GLOBAL    shift, and go to state 6
    NONLOCAL  shift, and go to state 7
    VARIABLE  shift, and go to state 8
    STRING    shift, and go to state 9
    INTEGER   shift, and go to state 10
    DECIMAL   shift, and go to state 11
    ADD       shift, and go to state 12
    SUB       shift, and go to state 13
    BITNOT    shift, and go to state 14
    TRUE      shift, and go to state 15
    FALSE     shift, and go to state 16
    NONE      shift, and go to state 17
    INVERT    shift, and go to state 18
    '['       shift, and go to state 19
    '('       shift, and go to state 20

    $end      reduce using rule 2 (program)
    CLASS     reduce using rule 22 (@2)
    FUNCTION  reduce using rule 20 (@1)
    TRY       reduce using rule 32 (@7)
    WHILE     reduce using rule 26 (@4)
    FOR       reduce using rule 28 (@5)
    IF        reduce using rule 24 (@3)
    $default  reduce using rule 30 (@6)

    statement      go to state 62
    simple_stmt    go to state 24
    compound_stmt  go to state 25
    @1             go to state 26
    @2             go to state 27
    @3             go to state 28
    @4             go to state 29
    @5             go to state 30
    @6             go to state 31
    @7             go to state 32
    assignment     go to state 33
    left_side      go to state 34
    value          go to state 35
    ternary        go to state 36
    lambda         go to state 37
    binop          go to state 38
    postfix        go to state 39
    term           go to state 40
    boolean        go to state 41
    list           go to state 42


state 23

    7 stmt_list: statement .

    $default  reduce using rule 7 (stmt_list)


state 24

    9 statement: simple_stmt .

    $default  reduce using rule 9 (statement)


state 25

   10 statement: compound_stmt .

    $default  reduce using rule 10 (statement)


state 26

   21 compound_stmt: @1 . function

    FUNCTION  shift, and go to state 63

    function  go to state 64


state 27

   23 compound_stmt: @2 . class

    CLASS  shift, and go to state 65

    class  go to state 66


state 28

   25 compound_stmt: @3 . if_stmt

    IF  shift, and go to state 67

    if_stmt  go to state 68


state 29

   27 compound_stmt: @4 . while_stmt

    WHILE  shift, and go to state 69

    while_stmt  go to state 70


state 30

   29 compound_stmt: @5 . for_stmt

    FOR  shift, and go to state 71

    for_stmt  go to state 72


state 31

   31 compound_stmt: @6 . import

    FROM    shift, and go to state 73
    IMPORT  shift, and go to state 74

    import  go to state 75


state 32

   33 compound_stmt: @7 . exception

    TRY  shift, and go to state 76

    exception  go to state 77
    try_block  go to state 78


state 33

   12 simple_stmt: assignment . ';'

    ';'  shift, and go to state 79


state 34

   46 assignment: left_side . '=' values
   47           | left_side . equals values
   49 left_side: left_side . ',' postfix

    PLUS_EQ     shift, and go to state 80
    MINUS_EQ    shift, and go to state 81
    DIV_EQ      shift, and go to state 82
    MUL_EQ      shift, and go to state 83
    MOD_EQ      shift, and go to state 84
    L_SHIFT_EQ  shift, and go to state 85
    R_SHIFT_EQ  shift, and go to state 86
    XOR_EQ      shift, and go to state 87
    FLDIV_EQ    shift, and go to state 88
    EXP_EQ      shift, and go to state 89
    AND_EQ      shift, and go to state 90
    OR_EQ       shift, and go to state 91
    ','         shift, and go to state 92
    '='         shift, and go to state 93

    equals  go to state 94


state 35

   13 simple_stmt: value . ';'

    ';'  shift, and go to state 95


state 36

   62 value: ternary .

    $default  reduce using rule 62 (value)


state 37

   63 ternary: lambda .
   64        | lambda . QMARK lambda ':' ternary

    QMARK  shift, and go to state 96

    $default  reduce using rule 63 (ternary)


state 38

   65 lambda: binop .
   67 binop: binop . LOGIC_OR binop
   68      | binop . LOGIC_AND binop
   69      | binop . BITOR binop
   70      | binop . BITXOR binop
   71      | binop . BITAND binop
   72      | binop . EQ binop
   73      | binop . NE binop
   74      | binop . LT binop
   75      | binop . GT binop
   76      | binop . LE binop
   77      | binop . GE binop
   78      | binop . L_SHIFT binop
   79      | binop . R_SHIFT binop
   80      | binop . ADD binop
   81      | binop . SUB binop
   82      | binop . MUL binop
   83      | binop . DIV binop
   84      | binop . MOD binop
   85      | binop . FLDIV binop
   86      | binop . EXP binop

    ADD        shift, and go to state 97
    SUB        shift, and go to state 98
    MUL        shift, and go to state 99
    DIV        shift, and go to state 100
    MOD        shift, and go to state 101
    FLDIV      shift, and go to state 102
    EXP        shift, and go to state 103
    BITAND     shift, and go to state 104
    BITOR      shift, and go to state 105
    BITXOR     shift, and go to state 106
    L_SHIFT    shift, and go to state 107
    R_SHIFT    shift, and go to state 108
    LOGIC_AND  shift, and go to state 109
    LOGIC_OR   shift, and go to state 110
    EQ         shift, and go to state 111
    NE         shift, and go to state 112
    LT         shift, and go to state 113
    GT         shift, and go to state 114
    GE         shift, and go to state 115
    LE         shift, and go to state 116

    $default  reduce using rule 65 (lambda)


state 39

   48 left_side: postfix .
   92 binop: postfix .
   94 postfix: postfix . '(' args ')'
   95        | postfix . '(' args ',' kwargs ')'
   96        | postfix . '.' VARIABLE
   97        | postfix . '[' value ']'
   98        | postfix . sliced_items

    '.'  shift, and go to state 117
    '['  shift, and go to state 118
    '('  shift, and go to state 119

    PLUS_EQ     reduce using rule 48 (left_side)
    MINUS_EQ    reduce using rule 48 (left_side)
    DIV_EQ      reduce using rule 48 (left_side)
    MUL_EQ      reduce using rule 48 (left_side)
    MOD_EQ      reduce using rule 48 (left_side)
    L_SHIFT_EQ  reduce using rule 48 (left_side)
    R_SHIFT_EQ  reduce using rule 48 (left_side)
    XOR_EQ      reduce using rule 48 (left_side)
    FLDIV_EQ    reduce using rule 48 (left_side)
    EXP_EQ      reduce using rule 48 (left_side)
    AND_EQ      reduce using rule 48 (left_side)
    OR_EQ       reduce using rule 48 (left_side)
    ','         reduce using rule 48 (left_side)
    '='         reduce using rule 48 (left_side)
    $default    reduce using rule 92 (binop)

    sliced_items  go to state 120


state 40

   93 postfix: term .

    $default  reduce using rule 93 (postfix)


state 41

  102 term: boolean .

    $default  reduce using rule 102 (term)


state 42

  103 term: list .

    $default  reduce using rule 103 (term)


state 43

  129 param_item: VARIABLE .
  130           | VARIABLE . '=' value

    '='  shift, and go to state 121

    $default  reduce using rule 129 (param_item)


state 44

   66 lambda: LAMBDA param_list . ':' lambda
  128 param_list: param_list . ',' param_item

    ':'  shift, and go to state 122
    ','  shift, and go to state 123


state 45

  127 param_list: param_item .

    $default  reduce using rule 127 (param_list)


state 46

   17 simple_stmt: RETURN ';' .

    $default  reduce using rule 17 (simple_stmt)


state 47

   16 simple_stmt: RETURN value . ';'

    ';'  shift, and go to state 124


state 48

   92 binop: postfix .
   94 postfix: postfix . '(' args ')'
   95        | postfix . '(' args ',' kwargs ')'
   96        | postfix . '.' VARIABLE
   97        | postfix . '[' value ']'
   98        | postfix . sliced_items

    '.'  shift, and go to state 117
    '['  shift, and go to state 118
    '('  shift, and go to state 119

    $default  reduce using rule 92 (binop)

    sliced_items  go to state 120


state 49

   18 simple_stmt: CONTINUE ';' .

    $default  reduce using rule 18 (simple_stmt)


state 50

   19 simple_stmt: BREAK ';' .

    $default  reduce using rule 19 (simple_stmt)


state 51

   14 simple_stmt: GLOBAL VARIABLE . ';'

    ';'  shift, and go to state 125


state 52

   15 simple_stmt: NONLOCAL VARIABLE . ';'

    ';'  shift, and go to state 126


state 53

   67 binop: binop . LOGIC_OR binop
   68      | binop . LOGIC_AND binop
   69      | binop . BITOR binop
   70      | binop . BITXOR binop
   71      | binop . BITAND binop
   72      | binop . EQ binop
   73      | binop . NE binop
   74      | binop . LT binop
   75      | binop . GT binop
   76      | binop . LE binop
   77      | binop . GE binop
   78      | binop . L_SHIFT binop
   79      | binop . R_SHIFT binop
   80      | binop . ADD binop
   81      | binop . SUB binop
   82      | binop . MUL binop
   83      | binop . DIV binop
   84      | binop . MOD binop
   85      | binop . FLDIV binop
   86      | binop . EXP binop
   90      | ADD binop .

    $default  reduce using rule 90 (binop)


state 54

   67 binop: binop . LOGIC_OR binop
   68      | binop . LOGIC_AND binop
   69      | binop . BITOR binop
   70      | binop . BITXOR binop
   71      | binop . BITAND binop
   72      | binop . EQ binop
   73      | binop . NE binop
   74      | binop . LT binop
   75      | binop . GT binop
   76      | binop . LE binop
   77      | binop . GE binop
   78      | binop . L_SHIFT binop
   79      | binop . R_SHIFT binop
   80      | binop . ADD binop
   81      | binop . SUB binop
   82      | binop . MUL binop
   83      | binop . DIV binop
   84      | binop . MOD binop
   85      | binop . FLDIV binop
   86      | binop . EXP binop
   89      | SUB binop .

    $default  reduce using rule 89 (binop)


state 55

   67 binop: binop . LOGIC_OR binop
   68      | binop . LOGIC_AND binop
   69      | binop . BITOR binop
   70      | binop . BITXOR binop
   71      | binop . BITAND binop
   72      | binop . EQ binop
   73      | binop . NE binop
   74      | binop . LT binop
   75      | binop . GT binop
   76      | binop . LE binop
   77      | binop . GE binop
   78      | binop . L_SHIFT binop
   79      | binop . R_SHIFT binop
   80      | binop . ADD binop
   81      | binop . SUB binop
   82      | binop . MUL binop
   83      | binop . DIV binop
   84      | binop . MOD binop
   85      | binop . FLDIV binop
   86      | binop . EXP binop
   88      | BITNOT binop .

    $default  reduce using rule 88 (binop)


state 56

   67 binop: binop . LOGIC_OR binop
   68      | binop . LOGIC_AND binop
   69      | binop . BITOR binop
   70      | binop . BITXOR binop
   71      | binop . BITAND binop
   72      | binop . EQ binop
   73      | binop . NE binop
   74      | binop . LT binop
   75      | binop . GT binop
   76      | binop . LE binop
   77      | binop . GE binop
   78      | binop . L_SHIFT binop
   79      | binop . R_SHIFT binop
   80      | binop . ADD binop
   81      | binop . SUB binop
   82      | binop . MUL binop
   83      | binop . DIV binop
   84      | binop . MOD binop
   85      | binop . FLDIV binop
   86      | binop . EXP binop
   87      | INVERT binop .

    $default  reduce using rule 87 (binop)


state 57

  111 list: '[' ']' .

    $default  reduce using rule 111 (list)


state 58

  119 values: value .

    $default  reduce using rule 119 (values)


state 59

  112 list: '[' values . ']'
  120 values: values . ',' value

    ','  shift, and go to state 127
    ']'  shift, and go to state 128


state 60

   91 binop: '(' value . ')'

    ')'  shift, and go to state 129


state 61

    0 $accept: program $end .

    $default  accept


state 62

    8 stmt_list: stmt_list statement .

    $default  reduce using rule 8 (stmt_list)


state 63

  125 function: FUNCTION . VARIABLE '(' param_list ')' @8 block

    VARIABLE  shift, and go to state 130


state 64

   21 compound_stmt: @1 function .

    $default  reduce using rule 21 (compound_stmt)


state 65

   44 class: CLASS . VARIABLE block
   45      | CLASS . VARIABLE '(' args ')' block

    VARIABLE  shift, and go to state 131


state 66

   23 compound_stmt: @2 class .

    $default  reduce using rule 23 (compound_stmt)


state 67

  133 if_stmt: IF . value block elif_chain else_block

    LAMBDA    shift, and go to state 1
    VARIABLE  shift, and go to state 8
    STRING    shift, and go to state 9
    INTEGER   shift, and go to state 10
    DECIMAL   shift, and go to state 11
    ADD       shift, and go to state 12
    SUB       shift, and go to state 13
    BITNOT    shift, and go to state 14
    TRUE      shift, and go to state 15
    FALSE     shift, and go to state 16
    NONE      shift, and go to state 17
    INVERT    shift, and go to state 18
    '['       shift, and go to state 19
    '('       shift, and go to state 20

    value    go to state 132
    ternary  go to state 36
    lambda   go to state 37
    binop    go to state 38
    postfix  go to state 48
    term     go to state 40
    boolean  go to state 41
    list     go to state 42


state 68

   25 compound_stmt: @3 if_stmt .

    $default  reduce using rule 25 (compound_stmt)


state 69

  132 while_stmt: WHILE . value @9 block

    LAMBDA    shift, and go to state 1
    VARIABLE  shift, and go to state 8
    STRING    shift, and go to state 9
    INTEGER   shift, and go to state 10
    DECIMAL   shift, and go to state 11
    ADD       shift, and go to state 12
    SUB       shift, and go to state 13
    BITNOT    shift, and go to state 14
    TRUE      shift, and go to state 15
    FALSE     shift, and go to state 16
    NONE      shift, and go to state 17
    INVERT    shift, and go to state 18
    '['       shift, and go to state 19
    '('       shift, and go to state 20

    value    go to state 133
    ternary  go to state 36
    lambda   go to state 37
    binop    go to state 38
    postfix  go to state 48
    term     go to state 40
    boolean  go to state 41
    list     go to state 42


state 70

   27 compound_stmt: @4 while_stmt .

    $default  reduce using rule 27 (compound_stmt)


state 71

  139 for_stmt: FOR . VARIABLE IN postfix @10 block

    VARIABLE  shift, and go to state 134


state 72

   29 compound_stmt: @5 for_stmt .

    $default  reduce using rule 29 (compound_stmt)


state 73

   36 import: FROM . module IMPORT import_items NL
   37       | FROM . module IMPORT MUL NL

    VARIABLE  shift, and go to state 135

    module  go to state 136


state 74

   34 import: IMPORT . module NL
   35       | IMPORT . module AS VARIABLE NL

    VARIABLE  shift, and go to state 135

    module  go to state 137


state 75

   31 compound_stmt: @6 import .

    $default  reduce using rule 31 (compound_stmt)


state 76

  143 try_block: TRY . block

    LBRACE  shift, and go to state 138
    NL      shift, and go to state 139
    ':'     shift, and go to state 140

    block  go to state 141


state 77

   33 compound_stmt: @7 exception .

    $default  reduce using rule 33 (compound_stmt)


state 78

  140 exception: try_block . catch_block
  141          | try_block . final_block
  142          | try_block . catch_block final_block

    CATCH    shift, and go to state 142
    FINALLY  shift, and go to state 143

    catch_block  go to state 144
    final_block  go to state 145


state 79

   12 simple_stmt: assignment ';' .

    $default  reduce using rule 12 (simple_stmt)


state 80

   50 equals: PLUS_EQ .

    $default  reduce using rule 50 (equals)


state 81

   51 equals: MINUS_EQ .

    $default  reduce using rule 51 (equals)


state 82

   52 equals: DIV_EQ .

    $default  reduce using rule 52 (equals)


state 83

   53 equals: MUL_EQ .

    $default  reduce using rule 53 (equals)


state 84

   56 equals: MOD_EQ .

    $default  reduce using rule 56 (equals)


state 85

   58 equals: L_SHIFT_EQ .

    $default  reduce using rule 58 (equals)


state 86

   57 equals: R_SHIFT_EQ .

    $default  reduce using rule 57 (equals)


state 87

   59 equals: XOR_EQ .

    $default  reduce using rule 59 (equals)


state 88
